--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,7 @@ img {
   display: flex;
   align-items: center;
 }
-.contacts {
-  margin-left: auto;
-}
+
 .header {
   letter-spacing: 0.02em;
   font-weight: 500;
@@ -98,6 +96,7 @@ img {
 }
 .site-contacts {
   display: flex;
+  margin-left: auto;
 }
 .site-contacts .item:not(:last-child) {
   margin-right: 50px;
@@ -213,12 +212,14 @@ img {
   color: var(--text-color);
   font-size: 16px;
   line-height: 1.18;
-  padding-bottom: 30px;
   text-align: center;
 }
 .team-img {
   margin-top: 0;
-  margin-bottom: 30px;
+}
+.team-card {
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 /* Подвал */
 .footer {
@@ -355,8 +356,9 @@ img {
 .portfolio-list {
   padding-left: 0;
   margin-top: 0;
-  margin-bottom: -30px;
-  margin-right: -30px;
+
+  margin-top: -30px;
+  margin-left: -30px;
 
   list-style: none;
   display: flex;
@@ -364,16 +366,20 @@ img {
 }
 .portfolio-item {
   flex-basis: calc((100% - 90px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
+
+  margin-top: 30px;
+  margin-left: 30px;
+
   background: #ffffff;
-  border: 1px solid #eeeeee;
 }
 .portfolio-link {
   text-decoration: none;
 }
 .card {
   padding: 20px 24px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
 }
 
 /* Основоной цвет текста  #212121*/
